fix overflow issue for mobile

--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -56,8 +56,9 @@ html {
 
 
 .titles{
-  width: 50%;
+  width: 50rem;
   min-height: 3rem;
+  max-height: 3rem;
   font-size: 2rem;
   font-weight: bold;
   border-radius: 20px;
@@ -353,8 +354,19 @@ pre{
   color: white;
 }
 
+.add-btn:hover{
+  background-color: white;
+  color:black;
+  border: 2px solid black;
+}
+
 .save-btn{
   background-color: rgb(140, 253, 148);
+}
+
+.save-btn:hover{
+  background-color: white;
+  border: 2px solid rgb(140, 253, 148);
 }
 
 .util-btn{
@@ -363,7 +375,9 @@ pre{
   font-size: 110%;
   font-weight: bold;
   cursor: pointer;
-  border-color: transparent;
+  border: 2px solid transparent;
+  transition: 0.3s;
+
 }
 
 .footer{
@@ -373,8 +387,35 @@ pre{
   justify-content: space-around;
 }
 
+
+.title-section{
+  display: flex;
+  align-items: center;
+}
+
+.title-expand-btn{
+  color: white;
+  height: 2rem;
+  background-color: rgb(47, 47, 47);
+  border-color: transparent;
+  border-radius: 10px;
+  padding: 0 1rem;
+  cursor: pointer;
+}
+
+
+
+
 @media only screen and (max-width: 600px) {
   .full{
     width: 100%;
   }
+  
+  .section-containers{
+    width: 70%;
+  }
+  .footer{
+    width: 20rem;
+  }
+
 }
